--- a/lessons/gamification/pom.xml
+++ b/lessons/gamification/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>rk</groupId>
-	<artifactId>dictionary</artifactId>
+	<artifactId>gamification</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>dictionary</name>
-	<description>Demo project for Spring Boot Microservices</description>
+	<name>gamification</name>
+	<description>Microservice gamification</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -55,18 +55,6 @@
 			<groupId>org.springframework.amqp</groupId>
 			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-test</artifactId>
-        </dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
 		</dependency>
 	</dependencies>
 
